# dad-rust-bash

./: .gitignore  Cargo.toml  README.md  data.json
src/: main.rs
